@@ -1123,3 +1123,169 @@ H5D H 0.1363 1.4953 1.0152 0.036 Uiso 1 calc .
 N6 N 0.17546(15) 1.04545(15) 0.60301(13) 0.0283(4) Uani 1 d .
 H6C H 0.2665 1.0333 0.6281 0.034 Uiso 1 calc .
 H6D H 0.1300 0.9880 0.5300 0.034 Uiso 1 calc .
+
+# Contains symops, but no space group names.
+# Contains the _space_group_IT_number data item.
+# Contains the _symmetry_Int_Tables_number data item.
+# Symops do not match any of the tabulated space groups.
+# The IT number should not be taken from the _space_group_IT_number data items
+# since it contain a value that is not an integer.
+# No space group IT number should be output.
+# Space group IT number should be output as '7'.
+data_15
+_symmetry_Int_Tables_number      7
+_space_group_IT_number           seven
+_cell_angle_alpha                104.685(2)
+_cell_angle_beta                 90.861(2)
+_cell_angle_gamma                98.832(3)
+_cell_formula_units_Z            2
+_cell_length_a                   8.8653(4)
+_cell_length_b                   9.4282(4)
+_cell_length_c                   10.7014(5)
+loop_
+_space_group_symop_id
+_space_group_symop_operation_xyz
+1 'x, y, z'
+2 '-x+1/42, -y+1/42, -z+1/42'
+loop_
+_atom_site_label
+_atom_site_type_symbol
+_atom_site_fract_x
+_atom_site_fract_y
+_atom_site_fract_z
+_atom_site_U_iso_or_equiv
+_atom_site_adp_type
+_atom_site_occupancy
+_atom_site_calc_flag
+_atom_site_refinement_flags
+O1 O 0.47582(15) 1.31235(14) 1.01988(13) 0.0426(4) Uani 1 d .
+O2 O 0.42854(14) 1.13557(14) 0.83620(13) 0.0402(4) Uani 1 d .
+H2 H 0.3508 1.1755 0.8322 0.060 Uiso 1 calc .
+C1 C 0.51109(18) 1.20558(18) 0.94235(16) 0.0279(4) Uani 1 d .
+C2 C 0.65414(18) 1.14146(18) 0.96042(16) 0.0291(4) Uani 1 d .
+H2A H 0.6486 1.1093 1.0416 0.035 Uiso 1 calc R
+H2B H 0.7436 1.2213 0.9709 0.035 Uiso 1 calc R
+C3 C 0.68088(18) 1.01053(17) 0.85080(16) 0.0277(4) Uani 1 d .
+H3A H 0.6833 1.0406 0.7686 0.033 Uiso 1 calc R
+H3B H 0.5944 0.9281 0.8425 0.033 Uiso 1 calc R
+C4 C 0.83007(18) 0.95527(18) 0.87244(16) 0.0296(4) Uani 1 d .
+H4A H 0.9155 1.0399 0.8894 0.035 Uiso 1 calc R
+H4B H 0.8236 0.9156 0.9498 0.035 Uiso 1 calc R
+C5 C 0.86370(19) 0.83468(18) 0.75664(17) 0.0311(4) Uani 1 d .
+H5A H 0.8678 0.8742 0.6792 0.037 Uiso 1 calc R
+H5B H 0.7786 0.7498 0.7408 0.037 Uiso 1 calc R
+C6 C 1.01377(19) 0.7785(2) 0.77407(17) 0.0324(4) Uani 1 d .
+H6A H 1.0976 0.8646 0.7981 0.039 Uiso 1 calc R
+H6B H 1.0060 0.7303 0.8464 0.039 Uiso 1 calc R
+C7 C 1.0542(2) 0.6686(2) 0.65373(18) 0.0354(4) Uani 1 d .
+H7A H 1.0548 0.7139 0.5798 0.042 Uiso 1 calc R
+H7B H 0.9745 0.5789 0.6334 0.042 Uiso 1 calc R
+C8 C 1.2093(2) 0.6227(2) 0.6697(2) 0.0456(5) Uani 1 d .
+H8A H 1.2889 0.7108 0.6886 0.068 Uiso 1 calc R
+H8B H 1.2302 0.5526 0.5897 0.068 Uiso 1 calc R
+H8C H 1.2085 0.5751 0.7413 0.068 Uiso 1 calc R
+C9 C -0.46436(18) 1.20357(18) 0.53206(16) 0.0291(4) Uani 1 d .
+H9 H -0.5197 1.1266 0.4647 0.035 Uiso 1 calc R
+C10 C -0.53069(19) 1.32911(18) 0.58261(18) 0.0306(4) Uani 1 d .
+H10 H -0.6288 1.3371 0.5509 0.037 Uiso 1 calc R
+C11 C -0.45003(19) 1.44185(18) 0.68024(17) 0.0313(4) Uani 1 d .
+H11 H -0.4917 1.5292 0.7171 0.038 Uiso 1 calc R
+C12 C -0.30684(18) 1.42488(17) 0.72335(16) 0.0270(4) Uani 1 d .
+H12 H -0.2485 1.5009 0.7897 0.032 Uiso 1 calc R
+C13 C -0.25027(17) 1.29500(16) 0.66789(15) 0.0223(4) Uani 1 d .
+C14 C -0.09605(17) 1.27237(16) 0.71168(15) 0.0219(4) Uani 1 d .
+C15 C 0.10723(17) 1.33944(16) 0.85722(15) 0.0235(4) Uani 1 d .
+C16 C 0.10658(17) 1.15036(16) 0.67531(15) 0.0229(4) Uani 1 d .
+N1 N -0.32752(15) 1.18515(14) 0.57283(13) 0.0257(4) Uani 1 d .
+N2 N -0.03467(15) 1.36146(14) 0.82448(13) 0.0235(3) Uani 1 d .
+N3 N 0.18020(14) 1.23497(14) 0.78552(13) 0.0256(4) Uani 1 d .
+N4 N -0.03362(14) 1.16591(13) 0.63290(13) 0.0234(3) Uani 1 d .
+N5 N 0.18004(15) 1.42551(15) 0.96535(13) 0.0303(4) Uani 1 d .
+H5C H 0.2721 1.4128 0.9874 0.036 Uiso 1 calc .
+H5D H 0.1363 1.4953 1.0152 0.036 Uiso 1 calc .
+N6 N 0.17546(15) 1.04545(15) 0.60301(13) 0.0283(4) Uani 1 d .
+H6C H 0.2665 1.0333 0.6281 0.034 Uiso 1 calc .
+H6D H 0.1300 0.9880 0.5300 0.034 Uiso 1 calc .
+
+# Contains symops, but no space group names.
+# Contains the _space_group_IT_number data item.
+# Contains the _symmetry_Int_Tables_number data item.
+# Symops do not match any of the tabulated space groups.
+# The IT number should not be taken from the _space_group_IT_number data items
+# since it contain a value that is an integer outside the [1, 231] range.
+# No space group IT number should be output.
+# Space group IT number should be output as '7'.
+data_16
+_symmetry_Int_Tables_number      7
+_space_group_IT_number           231
+_cell_angle_alpha                104.685(2)
+_cell_angle_beta                 90.861(2)
+_cell_angle_gamma                98.832(3)
+_cell_formula_units_Z            2
+_cell_length_a                   8.8653(4)
+_cell_length_b                   9.4282(4)
+_cell_length_c                   10.7014(5)
+loop_
+_space_group_symop_id
+_space_group_symop_operation_xyz
+1 'x, y, z'
+2 '-x+1/42, -y+1/42, -z+1/42'
+loop_
+_atom_site_label
+_atom_site_type_symbol
+_atom_site_fract_x
+_atom_site_fract_y
+_atom_site_fract_z
+_atom_site_U_iso_or_equiv
+_atom_site_adp_type
+_atom_site_occupancy
+_atom_site_calc_flag
+_atom_site_refinement_flags
+O1 O 0.47582(15) 1.31235(14) 1.01988(13) 0.0426(4) Uani 1 d .
+O2 O 0.42854(14) 1.13557(14) 0.83620(13) 0.0402(4) Uani 1 d .
+H2 H 0.3508 1.1755 0.8322 0.060 Uiso 1 calc .
+C1 C 0.51109(18) 1.20558(18) 0.94235(16) 0.0279(4) Uani 1 d .
+C2 C 0.65414(18) 1.14146(18) 0.96042(16) 0.0291(4) Uani 1 d .
+H2A H 0.6486 1.1093 1.0416 0.035 Uiso 1 calc R
+H2B H 0.7436 1.2213 0.9709 0.035 Uiso 1 calc R
+C3 C 0.68088(18) 1.01053(17) 0.85080(16) 0.0277(4) Uani 1 d .
+H3A H 0.6833 1.0406 0.7686 0.033 Uiso 1 calc R
+H3B H 0.5944 0.9281 0.8425 0.033 Uiso 1 calc R
+C4 C 0.83007(18) 0.95527(18) 0.87244(16) 0.0296(4) Uani 1 d .
+H4A H 0.9155 1.0399 0.8894 0.035 Uiso 1 calc R
+H4B H 0.8236 0.9156 0.9498 0.035 Uiso 1 calc R
+C5 C 0.86370(19) 0.83468(18) 0.75664(17) 0.0311(4) Uani 1 d .
+H5A H 0.8678 0.8742 0.6792 0.037 Uiso 1 calc R
+H5B H 0.7786 0.7498 0.7408 0.037 Uiso 1 calc R
+C6 C 1.01377(19) 0.7785(2) 0.77407(17) 0.0324(4) Uani 1 d .
+H6A H 1.0976 0.8646 0.7981 0.039 Uiso 1 calc R
+H6B H 1.0060 0.7303 0.8464 0.039 Uiso 1 calc R
+C7 C 1.0542(2) 0.6686(2) 0.65373(18) 0.0354(4) Uani 1 d .
+H7A H 1.0548 0.7139 0.5798 0.042 Uiso 1 calc R
+H7B H 0.9745 0.5789 0.6334 0.042 Uiso 1 calc R
+C8 C 1.2093(2) 0.6227(2) 0.6697(2) 0.0456(5) Uani 1 d .
+H8A H 1.2889 0.7108 0.6886 0.068 Uiso 1 calc R
+H8B H 1.2302 0.5526 0.5897 0.068 Uiso 1 calc R
+H8C H 1.2085 0.5751 0.7413 0.068 Uiso 1 calc R
+C9 C -0.46436(18) 1.20357(18) 0.53206(16) 0.0291(4) Uani 1 d .
+H9 H -0.5197 1.1266 0.4647 0.035 Uiso 1 calc R
+C10 C -0.53069(19) 1.32911(18) 0.58261(18) 0.0306(4) Uani 1 d .
+H10 H -0.6288 1.3371 0.5509 0.037 Uiso 1 calc R
+C11 C -0.45003(19) 1.44185(18) 0.68024(17) 0.0313(4) Uani 1 d .
+H11 H -0.4917 1.5292 0.7171 0.038 Uiso 1 calc R
+C12 C -0.30684(18) 1.42488(17) 0.72335(16) 0.0270(4) Uani 1 d .
+H12 H -0.2485 1.5009 0.7897 0.032 Uiso 1 calc R
+C13 C -0.25027(17) 1.29500(16) 0.66789(15) 0.0223(4) Uani 1 d .
+C14 C -0.09605(17) 1.27237(16) 0.71168(15) 0.0219(4) Uani 1 d .
+C15 C 0.10723(17) 1.33944(16) 0.85722(15) 0.0235(4) Uani 1 d .
+C16 C 0.10658(17) 1.15036(16) 0.67531(15) 0.0229(4) Uani 1 d .
+N1 N -0.32752(15) 1.18515(14) 0.57283(13) 0.0257(4) Uani 1 d .
+N2 N -0.03467(15) 1.36146(14) 0.82448(13) 0.0235(3) Uani 1 d .
+N3 N 0.18020(14) 1.23497(14) 0.78552(13) 0.0256(4) Uani 1 d .
+N4 N -0.03362(14) 1.16591(13) 0.63290(13) 0.0234(3) Uani 1 d .
+N5 N 0.18004(15) 1.42551(15) 0.96535(13) 0.0303(4) Uani 1 d .
+H5C H 0.2721 1.4128 0.9874 0.036 Uiso 1 calc .
+H5D H 0.1363 1.4953 1.0152 0.036 Uiso 1 calc .
+N6 N 0.17546(15) 1.04545(15) 0.60301(13) 0.0283(4) Uani 1 d .
+H6C H 0.2665 1.0333 0.6281 0.034 Uiso 1 calc .
+H6D H 0.1300 0.9880 0.5300 0.034 Uiso 1 calc .
