@@ -11,6 +11,12 @@ scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_11: WARNING, data it
 scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_12: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
 scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_13: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
 scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_14: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
+scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_15: WARNING, data items ['_space_group_IT_number', '_symmetry_Int_Tables_number'] refer to the same piece of information, but have differing values ['seven', '7'] -- the 'seven' value will be used.
+scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_15: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
+scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_15: WARNING, data item '_space_group_IT_number' value 'seven' is not an integer number in the range of [1, 230] -- value will be ignored.
+scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_16: WARNING, data items ['_space_group_IT_number', '_symmetry_Int_Tables_number'] refer to the same piece of information, but have differing values ['231', '7'] -- the '231' value will be used.
+scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_16: WARNING, could not infer the space group number from the provided symmetry operation list -- data items that provide an explicit space group number will be used instead.
+scripts/cif_molecule: tests/cases/cif_molecule_236.inp data_16: WARNING, data item '_space_group_IT_number' value '231' is not an integer number in the range of [1, 230] -- value will be ignored.
 data_1_molecule_0
 _cell_angle_alpha                104.685(2)
 _cell_angle_beta                 90.861(2)
@@ -2429,6 +2435,362 @@ _cod_data_source_file            cif_molecule_236.inp
 _cod_data_source_block           14
 _cell_formula_units_Z            1
 _space_group_name_H-M_alt        'P 1'
+_cod_molecule_is_polymer         no
+loop_
+_space_group_symop_operation_xyz
+'x, y, z'
+loop_
+_atom_site_label
+_atom_site_type_symbol
+_atom_site_fract_x
+_atom_site_fract_y
+_atom_site_fract_z
+_atom_site_U_iso_or_equiv
+_atom_site_occupancy
+_atom_site_refinement_flags
+_atom_site_calc_flag
+C9 C 0.535640 0.203570 0.532060 0.0291(4) 1 . d
+H9 H 0.480300 0.126600 0.464700 0.035 1 R calc
+N1 N 0.672480 0.185150 0.572830 0.0257(4) 1 . d
+N2 N 0.965330 0.361460 0.824480 0.0235(3) 1 . d
+N4 N 0.966380 0.165910 0.632900 0.0234(3) 1 . d
+C10 C 0.469310 0.329110 0.582610 0.0306(4) 1 . d
+C11 C 0.549970 0.441850 0.680240 0.0313(4) 1 . d
+C12 C 0.693160 0.424880 0.723350 0.0270(4) 1 . d
+C13 C 0.749730 0.295000 0.667890 0.0223(4) 1 . d
+C14 C 0.903950 0.272370 0.711680 0.0219(4) 1 . d
+H10 H 0.371200 0.337100 0.550900 0.037 1 R calc
+H11 H 0.508300 0.529200 0.717100 0.038 1 R calc
+H12 H 0.751500 0.500900 0.789700 0.032 1 R calc
+N3_1_655 N 1.180200 0.234970 0.785520 0.0256(4) 1 . d
+N5_1_655 N 1.180040 0.425510 0.965350 0.0303(4) 1 . d
+N6_1_655 N 1.175460 0.045450 0.603010 0.0283(4) 1 . d
+C15_1_655 C 1.107230 0.339440 0.857220 0.0235(4) 1 . d
+C16_1_655 C 1.106580 0.150360 0.675310 0.0229(4) 1 . d
+H5C_1_655 H 1.272100 0.412800 0.987400 0.036 1 . calc
+H5D_1_656 H 1.136300 0.495300 1.015200 0.036 1 . calc
+H6C_1_655 H 1.266500 0.033300 0.628100 0.034 1 . calc
+H6D_1_645 H 1.130000 -0.012000 0.530000 0.034 1 . calc
+loop_
+_cod_molecule_atom_label
+_cod_molecule_atom_orig_label
+_cod_molecule_atom_symmetry
+_cod_molecule_atom_symop_id
+_cod_molecule_atom_symop_xyz
+_cod_molecule_atom_transl_id
+_cod_molecule_atom_transl_x
+_cod_molecule_atom_transl_y
+_cod_molecule_atom_transl_z
+_cod_molecule_atom_mult
+_cod_molecule_atom_mult_ratio
+C9 C9 1_555 1 x,y,z 555 0 0 0 2 1
+H9 H9 1_555 1 x,y,z 555 0 0 0 2 1
+N1 N1 1_555 1 x,y,z 555 0 0 0 2 1
+N2 N2 1_555 1 x,y,z 555 0 0 0 2 1
+N4 N4 1_555 1 x,y,z 555 0 0 0 2 1
+C10 C10 1_555 1 x,y,z 555 0 0 0 2 1
+C11 C11 1_555 1 x,y,z 555 0 0 0 2 1
+C12 C12 1_555 1 x,y,z 555 0 0 0 2 1
+C13 C13 1_555 1 x,y,z 555 0 0 0 2 1
+C14 C14 1_555 1 x,y,z 555 0 0 0 2 1
+H10 H10 1_555 1 x,y,z 555 0 0 0 2 1
+H11 H11 1_555 1 x,y,z 555 0 0 0 2 1
+H12 H12 1_555 1 x,y,z 555 0 0 0 2 1
+N3_1_655 N3 1_655 1 x,y,z 655 1 0 0 2 1
+N5_1_655 N5 1_655 1 x,y,z 655 1 0 0 2 1
+N6_1_655 N6 1_655 1 x,y,z 655 1 0 0 2 1
+C15_1_655 C15 1_655 1 x,y,z 655 1 0 0 2 1
+C16_1_655 C16 1_655 1 x,y,z 655 1 0 0 2 1
+H5C_1_655 H5C 1_655 1 x,y,z 655 1 0 0 2 1
+H5D_1_656 H5D 1_656 1 x,y,z 656 1 0 1 2 1
+H6C_1_655 H6C 1_655 1 x,y,z 655 1 0 0 2 1
+H6D_1_645 H6D 1_645 1 x,y,z 645 1 -1 0 2 1
+data_15_molecule_0
+_cell_angle_alpha                104.685(2)
+_cell_angle_beta                 90.861(2)
+_cell_angle_gamma                98.832(3)
+_cell_length_a                   8.8653(4)
+_cell_length_b                   9.4282(4)
+_cell_length_c                   10.7014(5)
+_audit_creation_method
+'Id: <script_name> <revision_nr> <date> <time> <author>'
+_chemical_formula_sum            'C8 H16 O2'
+_cod_data_source_file            cif_molecule_236.inp
+_cod_data_source_block           15
+_cell_formula_units_Z            1
+_space_group_name_H-M_alt        'P 1'
+_cod_molecule_space_group_IT_number 7
+_cod_molecule_is_polymer         no
+loop_
+_space_group_symop_operation_xyz
+'x, y, z'
+loop_
+_atom_site_label
+_atom_site_type_symbol
+_atom_site_fract_x
+_atom_site_fract_y
+_atom_site_fract_z
+_atom_site_U_iso_or_equiv
+_atom_site_occupancy
+_atom_site_refinement_flags
+_atom_site_calc_flag
+O1 O 0.475820 0.312350 0.019880 0.0426(4) 1 . d
+H2A H 0.648600 0.109300 0.041600 0.035 1 R calc
+C1_1_554 C 0.511090 0.205580 -0.057650 0.0279(4) 1 . d
+C2_1_554 C 0.654140 0.141460 -0.039580 0.0291(4) 1 . d
+C3_1_554 C 0.680880 0.010530 -0.149200 0.0277(4) 1 . d
+C4_1_544 C 0.830070 -0.044730 -0.127560 0.0296(4) 1 . d
+C5_1_544 C 0.863700 -0.165320 -0.243360 0.0311(4) 1 . d
+C6_1_644 C 1.013770 -0.221500 -0.225930 0.0324(4) 1 . d
+C7_1_644 C 1.054200 -0.331400 -0.346270 0.0354(4) 1 . d
+C8_1_644 C 1.209300 -0.377300 -0.330300 0.0456(5) 1 . d
+H2_1_554 H 0.350800 0.175500 -0.167800 0.060 1 . calc
+O2_1_554 O 0.428540 0.135570 -0.163800 0.0402(4) 1 . d
+H2B_1_554 H 0.743600 0.221300 -0.029100 0.035 1 R calc
+H3A_1_554 H 0.683300 0.040600 -0.231400 0.033 1 R calc
+H3B_1_544 H 0.594400 -0.071900 -0.157500 0.033 1 R calc
+H4A_1_554 H 0.915500 0.039900 -0.110600 0.035 1 R calc
+H4B_1_544 H 0.823600 -0.084400 -0.050200 0.035 1 R calc
+H5A_1_544 H 0.867800 -0.125800 -0.320800 0.037 1 R calc
+H5B_1_544 H 0.778600 -0.250200 -0.259200 0.037 1 R calc
+H6A_1_644 H 1.097600 -0.135400 -0.201900 0.039 1 R calc
+H6B_1_644 H 1.006000 -0.269700 -0.153600 0.039 1 R calc
+H7A_1_644 H 1.054800 -0.286100 -0.420200 0.042 1 R calc
+H7B_1_544 H 0.974500 -0.421100 -0.366600 0.042 1 R calc
+H8A_1_644 H 1.288900 -0.289200 -0.311400 0.068 1 R calc
+H8B_1_644 H 1.230200 -0.447400 -0.410300 0.068 1 R calc
+H8C_1_644 H 1.208500 -0.424900 -0.258700 0.068 1 R calc
+loop_
+_cod_molecule_atom_label
+_cod_molecule_atom_orig_label
+_cod_molecule_atom_symmetry
+_cod_molecule_atom_symop_id
+_cod_molecule_atom_symop_xyz
+_cod_molecule_atom_transl_id
+_cod_molecule_atom_transl_x
+_cod_molecule_atom_transl_y
+_cod_molecule_atom_transl_z
+_cod_molecule_atom_mult
+_cod_molecule_atom_mult_ratio
+O1 O1 1_555 1 x,y,z 555 0 0 0 2 1
+H2A H2A 1_555 1 x,y,z 555 0 0 0 2 1
+C1_1_554 C1 1_554 1 x,y,z 554 0 0 -1 2 1
+C2_1_554 C2 1_554 1 x,y,z 554 0 0 -1 2 1
+C3_1_554 C3 1_554 1 x,y,z 554 0 0 -1 2 1
+C4_1_544 C4 1_544 1 x,y,z 544 0 -1 -1 2 1
+C5_1_544 C5 1_544 1 x,y,z 544 0 -1 -1 2 1
+C6_1_644 C6 1_644 1 x,y,z 644 1 -1 -1 2 1
+C7_1_644 C7 1_644 1 x,y,z 644 1 -1 -1 2 1
+C8_1_644 C8 1_644 1 x,y,z 644 1 -1 -1 2 1
+H2_1_554 H2 1_554 1 x,y,z 554 0 0 -1 2 1
+O2_1_554 O2 1_554 1 x,y,z 554 0 0 -1 2 1
+H2B_1_554 H2B 1_554 1 x,y,z 554 0 0 -1 2 1
+H3A_1_554 H3A 1_554 1 x,y,z 554 0 0 -1 2 1
+H3B_1_544 H3B 1_544 1 x,y,z 544 0 -1 -1 2 1
+H4A_1_554 H4A 1_554 1 x,y,z 554 0 0 -1 2 1
+H4B_1_544 H4B 1_544 1 x,y,z 544 0 -1 -1 2 1
+H5A_1_544 H5A 1_544 1 x,y,z 544 0 -1 -1 2 1
+H5B_1_544 H5B 1_544 1 x,y,z 544 0 -1 -1 2 1
+H6A_1_644 H6A 1_644 1 x,y,z 644 1 -1 -1 2 1
+H6B_1_644 H6B 1_644 1 x,y,z 644 1 -1 -1 2 1
+H7A_1_644 H7A 1_644 1 x,y,z 644 1 -1 -1 2 1
+H7B_1_544 H7B 1_544 1 x,y,z 544 0 -1 -1 2 1
+H8A_1_644 H8A 1_644 1 x,y,z 644 1 -1 -1 2 1
+H8B_1_644 H8B 1_644 1 x,y,z 644 1 -1 -1 2 1
+H8C_1_644 H8C 1_644 1 x,y,z 644 1 -1 -1 2 1
+data_15_molecule_1
+_cell_angle_alpha                104.685(2)
+_cell_angle_beta                 90.861(2)
+_cell_angle_gamma                98.832(3)
+_cell_length_a                   8.8653(4)
+_cell_length_b                   9.4282(4)
+_cell_length_c                   10.7014(5)
+_audit_creation_method
+'Id: <script_name> <revision_nr> <date> <time> <author>'
+_chemical_formula_sum            'C8 H8 N6'
+_cod_data_source_file            cif_molecule_236.inp
+_cod_data_source_block           15
+_cell_formula_units_Z            1
+_space_group_name_H-M_alt        'P 1'
+_cod_molecule_space_group_IT_number 7
+_cod_molecule_is_polymer         no
+loop_
+_space_group_symop_operation_xyz
+'x, y, z'
+loop_
+_atom_site_label
+_atom_site_type_symbol
+_atom_site_fract_x
+_atom_site_fract_y
+_atom_site_fract_z
+_atom_site_U_iso_or_equiv
+_atom_site_occupancy
+_atom_site_refinement_flags
+_atom_site_calc_flag
+C9 C 0.535640 0.203570 0.532060 0.0291(4) 1 . d
+H9 H 0.480300 0.126600 0.464700 0.035 1 R calc
+N1 N 0.672480 0.185150 0.572830 0.0257(4) 1 . d
+N2 N 0.965330 0.361460 0.824480 0.0235(3) 1 . d
+N4 N 0.966380 0.165910 0.632900 0.0234(3) 1 . d
+C10 C 0.469310 0.329110 0.582610 0.0306(4) 1 . d
+C11 C 0.549970 0.441850 0.680240 0.0313(4) 1 . d
+C12 C 0.693160 0.424880 0.723350 0.0270(4) 1 . d
+C13 C 0.749730 0.295000 0.667890 0.0223(4) 1 . d
+C14 C 0.903950 0.272370 0.711680 0.0219(4) 1 . d
+H10 H 0.371200 0.337100 0.550900 0.037 1 R calc
+H11 H 0.508300 0.529200 0.717100 0.038 1 R calc
+H12 H 0.751500 0.500900 0.789700 0.032 1 R calc
+N3_1_655 N 1.180200 0.234970 0.785520 0.0256(4) 1 . d
+N5_1_655 N 1.180040 0.425510 0.965350 0.0303(4) 1 . d
+N6_1_655 N 1.175460 0.045450 0.603010 0.0283(4) 1 . d
+C15_1_655 C 1.107230 0.339440 0.857220 0.0235(4) 1 . d
+C16_1_655 C 1.106580 0.150360 0.675310 0.0229(4) 1 . d
+H5C_1_655 H 1.272100 0.412800 0.987400 0.036 1 . calc
+H5D_1_656 H 1.136300 0.495300 1.015200 0.036 1 . calc
+H6C_1_655 H 1.266500 0.033300 0.628100 0.034 1 . calc
+H6D_1_645 H 1.130000 -0.012000 0.530000 0.034 1 . calc
+loop_
+_cod_molecule_atom_label
+_cod_molecule_atom_orig_label
+_cod_molecule_atom_symmetry
+_cod_molecule_atom_symop_id
+_cod_molecule_atom_symop_xyz
+_cod_molecule_atom_transl_id
+_cod_molecule_atom_transl_x
+_cod_molecule_atom_transl_y
+_cod_molecule_atom_transl_z
+_cod_molecule_atom_mult
+_cod_molecule_atom_mult_ratio
+C9 C9 1_555 1 x,y,z 555 0 0 0 2 1
+H9 H9 1_555 1 x,y,z 555 0 0 0 2 1
+N1 N1 1_555 1 x,y,z 555 0 0 0 2 1
+N2 N2 1_555 1 x,y,z 555 0 0 0 2 1
+N4 N4 1_555 1 x,y,z 555 0 0 0 2 1
+C10 C10 1_555 1 x,y,z 555 0 0 0 2 1
+C11 C11 1_555 1 x,y,z 555 0 0 0 2 1
+C12 C12 1_555 1 x,y,z 555 0 0 0 2 1
+C13 C13 1_555 1 x,y,z 555 0 0 0 2 1
+C14 C14 1_555 1 x,y,z 555 0 0 0 2 1
+H10 H10 1_555 1 x,y,z 555 0 0 0 2 1
+H11 H11 1_555 1 x,y,z 555 0 0 0 2 1
+H12 H12 1_555 1 x,y,z 555 0 0 0 2 1
+N3_1_655 N3 1_655 1 x,y,z 655 1 0 0 2 1
+N5_1_655 N5 1_655 1 x,y,z 655 1 0 0 2 1
+N6_1_655 N6 1_655 1 x,y,z 655 1 0 0 2 1
+C15_1_655 C15 1_655 1 x,y,z 655 1 0 0 2 1
+C16_1_655 C16 1_655 1 x,y,z 655 1 0 0 2 1
+H5C_1_655 H5C 1_655 1 x,y,z 655 1 0 0 2 1
+H5D_1_656 H5D 1_656 1 x,y,z 656 1 0 1 2 1
+H6C_1_655 H6C 1_655 1 x,y,z 655 1 0 0 2 1
+H6D_1_645 H6D 1_645 1 x,y,z 645 1 -1 0 2 1
+data_16_molecule_0
+_cell_angle_alpha                104.685(2)
+_cell_angle_beta                 90.861(2)
+_cell_angle_gamma                98.832(3)
+_cell_length_a                   8.8653(4)
+_cell_length_b                   9.4282(4)
+_cell_length_c                   10.7014(5)
+_audit_creation_method
+'Id: <script_name> <revision_nr> <date> <time> <author>'
+_chemical_formula_sum            'C8 H16 O2'
+_cod_data_source_file            cif_molecule_236.inp
+_cod_data_source_block           16
+_cell_formula_units_Z            1
+_space_group_name_H-M_alt        'P 1'
+_cod_molecule_space_group_IT_number 7
+_cod_molecule_is_polymer         no
+loop_
+_space_group_symop_operation_xyz
+'x, y, z'
+loop_
+_atom_site_label
+_atom_site_type_symbol
+_atom_site_fract_x
+_atom_site_fract_y
+_atom_site_fract_z
+_atom_site_U_iso_or_equiv
+_atom_site_occupancy
+_atom_site_refinement_flags
+_atom_site_calc_flag
+O1 O 0.475820 0.312350 0.019880 0.0426(4) 1 . d
+H2A H 0.648600 0.109300 0.041600 0.035 1 R calc
+C1_1_554 C 0.511090 0.205580 -0.057650 0.0279(4) 1 . d
+C2_1_554 C 0.654140 0.141460 -0.039580 0.0291(4) 1 . d
+C3_1_554 C 0.680880 0.010530 -0.149200 0.0277(4) 1 . d
+C4_1_544 C 0.830070 -0.044730 -0.127560 0.0296(4) 1 . d
+C5_1_544 C 0.863700 -0.165320 -0.243360 0.0311(4) 1 . d
+C6_1_644 C 1.013770 -0.221500 -0.225930 0.0324(4) 1 . d
+C7_1_644 C 1.054200 -0.331400 -0.346270 0.0354(4) 1 . d
+C8_1_644 C 1.209300 -0.377300 -0.330300 0.0456(5) 1 . d
+H2_1_554 H 0.350800 0.175500 -0.167800 0.060 1 . calc
+O2_1_554 O 0.428540 0.135570 -0.163800 0.0402(4) 1 . d
+H2B_1_554 H 0.743600 0.221300 -0.029100 0.035 1 R calc
+H3A_1_554 H 0.683300 0.040600 -0.231400 0.033 1 R calc
+H3B_1_544 H 0.594400 -0.071900 -0.157500 0.033 1 R calc
+H4A_1_554 H 0.915500 0.039900 -0.110600 0.035 1 R calc
+H4B_1_544 H 0.823600 -0.084400 -0.050200 0.035 1 R calc
+H5A_1_544 H 0.867800 -0.125800 -0.320800 0.037 1 R calc
+H5B_1_544 H 0.778600 -0.250200 -0.259200 0.037 1 R calc
+H6A_1_644 H 1.097600 -0.135400 -0.201900 0.039 1 R calc
+H6B_1_644 H 1.006000 -0.269700 -0.153600 0.039 1 R calc
+H7A_1_644 H 1.054800 -0.286100 -0.420200 0.042 1 R calc
+H7B_1_544 H 0.974500 -0.421100 -0.366600 0.042 1 R calc
+H8A_1_644 H 1.288900 -0.289200 -0.311400 0.068 1 R calc
+H8B_1_644 H 1.230200 -0.447400 -0.410300 0.068 1 R calc
+H8C_1_644 H 1.208500 -0.424900 -0.258700 0.068 1 R calc
+loop_
+_cod_molecule_atom_label
+_cod_molecule_atom_orig_label
+_cod_molecule_atom_symmetry
+_cod_molecule_atom_symop_id
+_cod_molecule_atom_symop_xyz
+_cod_molecule_atom_transl_id
+_cod_molecule_atom_transl_x
+_cod_molecule_atom_transl_y
+_cod_molecule_atom_transl_z
+_cod_molecule_atom_mult
+_cod_molecule_atom_mult_ratio
+O1 O1 1_555 1 x,y,z 555 0 0 0 2 1
+H2A H2A 1_555 1 x,y,z 555 0 0 0 2 1
+C1_1_554 C1 1_554 1 x,y,z 554 0 0 -1 2 1
+C2_1_554 C2 1_554 1 x,y,z 554 0 0 -1 2 1
+C3_1_554 C3 1_554 1 x,y,z 554 0 0 -1 2 1
+C4_1_544 C4 1_544 1 x,y,z 544 0 -1 -1 2 1
+C5_1_544 C5 1_544 1 x,y,z 544 0 -1 -1 2 1
+C6_1_644 C6 1_644 1 x,y,z 644 1 -1 -1 2 1
+C7_1_644 C7 1_644 1 x,y,z 644 1 -1 -1 2 1
+C8_1_644 C8 1_644 1 x,y,z 644 1 -1 -1 2 1
+H2_1_554 H2 1_554 1 x,y,z 554 0 0 -1 2 1
+O2_1_554 O2 1_554 1 x,y,z 554 0 0 -1 2 1
+H2B_1_554 H2B 1_554 1 x,y,z 554 0 0 -1 2 1
+H3A_1_554 H3A 1_554 1 x,y,z 554 0 0 -1 2 1
+H3B_1_544 H3B 1_544 1 x,y,z 544 0 -1 -1 2 1
+H4A_1_554 H4A 1_554 1 x,y,z 554 0 0 -1 2 1
+H4B_1_544 H4B 1_544 1 x,y,z 544 0 -1 -1 2 1
+H5A_1_544 H5A 1_544 1 x,y,z 544 0 -1 -1 2 1
+H5B_1_544 H5B 1_544 1 x,y,z 544 0 -1 -1 2 1
+H6A_1_644 H6A 1_644 1 x,y,z 644 1 -1 -1 2 1
+H6B_1_644 H6B 1_644 1 x,y,z 644 1 -1 -1 2 1
+H7A_1_644 H7A 1_644 1 x,y,z 644 1 -1 -1 2 1
+H7B_1_544 H7B 1_544 1 x,y,z 544 0 -1 -1 2 1
+H8A_1_644 H8A 1_644 1 x,y,z 644 1 -1 -1 2 1
+H8B_1_644 H8B 1_644 1 x,y,z 644 1 -1 -1 2 1
+H8C_1_644 H8C 1_644 1 x,y,z 644 1 -1 -1 2 1
+data_16_molecule_1
+_cell_angle_alpha                104.685(2)
+_cell_angle_beta                 90.861(2)
+_cell_angle_gamma                98.832(3)
+_cell_length_a                   8.8653(4)
+_cell_length_b                   9.4282(4)
+_cell_length_c                   10.7014(5)
+_audit_creation_method
+'Id: <script_name> <revision_nr> <date> <time> <author>'
+_chemical_formula_sum            'C8 H8 N6'
+_cod_data_source_file            cif_molecule_236.inp
+_cod_data_source_block           16
+_cell_formula_units_Z            1
+_space_group_name_H-M_alt        'P 1'
+_cod_molecule_space_group_IT_number 7
 _cod_molecule_is_polymer         no
 loop_
 _space_group_symop_operation_xyz
