@@ -6,6 +6,8 @@ cod-tools (unreleased)
           and trailing whitespace symbols when constructing lookup keys.
         - updated the get_space_group_number() subroutine to report symmetry
           operation lists that do not correspond to a known space group.
+        - updated the get_space_group_number() subroutine to report space
+          group number values that are not integers in the range of [1, 230].
   * Fixed:
     - COD::CIF::Data:
         - updated the get_space_group_number() subroutine to ignore
